Add css base for the general proportions of the calculator

--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My First Calculator!</title>
+  <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
 </head>
-  
+<div id="calcContainer">
+  <div id="screen"></div>
+  <div id="clearBtnArea">
+    <button id="clearBtn">Clear</button>  
+  </div>
+  <div id="numAndOperatorContainer">
+    <div id="numContainer">
+      <button class="num" id="seven">7</button>
+      <button class="num" id="eight">8</button>
+      <button class="num" id="nine">9</button>
+      <button class="num" id="four">4</button>
+      <button class="num" id="five">5</button>
+      <button class="num" id="six">6</button>
+      <button class="num" id="one">1</button>
+      <button class="num" id="two">2</button>
+      <button class="num" id="three">3</button>
+      <button class="num" id="zero">0</button>
+      <button class="num" id="dot">.</button>
+      <button class="num" id="negative">(-)</button>
+    </div>
+    <div id="operatorContainer">
+      <button class="operator" id="plus">+</button>
+      <button class="operator" id="minus">-</button>
+      <button class="operator" id="multiply">x</button>
+      <button class="operator" id="divide">÷</button>
+      <button class="operator" id="equals">=</button>
+    </div>
+  </div>
+</div>
+
 <body>
 
 </body>
