--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div id="operatorContainer">
       <button class="operator" id="divide">÷</button>
       <button class="operator" id="multiply">x</button>
-      <button class="operator" id="minus">-</button>
-      <button class="operator" id="plus">+</button>
+      <button class="operator" id="subtract">-</button>
+      <button class="operator" id="add">+</button>
       <button class="operator" id="equals">=</button>
     </div>
   </div>
