--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <button class="num" id="negative">(-)</button>
     </div>
     <div id="operatorContainer">
+      <button class="operator" id="back">←</button>
       <button class="operator" id="divide">÷</button>
       <button class="operator" id="multiply">x</button>
       <button class="operator" id="subtract">-</button>
