Start fix issue with dot button.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="operatorContainer">
       <button class="operator" id="back">←</button>
       <button class="operator" id="divide">÷</button>
-      <button class="operator" id="multiply">x</button>
+      <button class="operator" id="multiply">×</button>
       <button class="operator" id="subtract">-</button>
       <button class="operator" id="add">+</button>
       <button class="operator" id="equals">=</button>
