Add display to store the previous expressions. Also add the expressions in a list to said display

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <script src="script.js" defer></script>
 </head>
 <div id="calcContainer">
-  <div id="screen"></div>
+  <div id="screen">
+    <div id="expressionMemory"></div>
+    <div id="expressionDisplay"></div>
+  </div>
   <div id="clearBtnArea">
     <button id="clearBtn">Clear</button>
   </div>
