Start fix issue with the scroll in memory window

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <div id="calcContainer">
   <div id="screen">
-    <div id="expressionMemory"></div>
+    <div id="memoryWrapper">
+      <div id="expressionMemory"></div>
+    </div>
     <div id="expressionDisplay"></div>
   </div>
   <div id="clearBtnArea">
