Edit logic for negative button to include parenthesis

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </div>
   <div id="clearBtnArea">
     <button id="clearBtn">Clear</button>
+    <button id="clearMemBtn">Mem Clear</button>
   </div>
   <div id="numAndOperatorContainer">
     <div id="numContainer">
